--- a/Apps/ShapeReconstruction/CMakeLists.txt
+++ b/Apps/ShapeReconstruction/CMakeLists.txt
@@ -39,6 +39,7 @@ if (EXISTS /home/bebe0705/.am_fortuna)
 	set(RBK_LOC "/home/bebe0705/libs/local/lib/cmake/RigidBodyKinematics")
 	# set(SBGAT_LOC "/home/bebe0705/libs/local/lib/cmake/SbgatCore")
 	set(ASPEN_LOC "/home/bebe0705/libs/local/lib/cmake/ASPEN")
+	set(CGAL_interface_LOC "/home/bebe0705/libs/local/lib/cmake/CGAL_interface")
 
 else()
 	set(IS_FORTUNA OFF)
@@ -117,7 +118,7 @@ include( ${CGAL_USE_FILE} )
 include( CGAL_CreateSingleSourceCGALProgram )
 
 # Find CGAL interface
-find_package(CGAL_interface REQUIRED)
+find_package(CGAL_interface REQUIRED PATHS ${CGAL_interface_LOC})
 include_directories( ${CGAL_interface_INCLUDE_DIR} )
 
 # Find SBGAT 
