--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -202,24 +202,21 @@ file(GLOB includes include/*.hpp)
 file(GLOB includes_gnuplot external/Gnuplot/include/*.hpp)
 
 # Installing
-if (NOT ${IS_FORTUNA})
-	
-	install (TARGETS ${LIB_NAME} DESTINATION /usr/local/lib)
-	install(FILES ${includes} DESTINATION /usr/local/include/ASPEN/)
-	install(FILES ${includes_gnuplot} DESTINATION /usr/local/include/ASPEN/external/Gnuplot/)
-	install (FILES ${PROJECT_SOURCE_DIR}/ASPENConfig.cmake DESTINATION /usr/local/lib/cmake/ASPEN/)
-
-elseif(UNIX AND NOT APPLE)
-	install (TARGETS ${LIB_NAME} DESTINATION /usr/local/lib)
-	install(FILES ${includes} DESTINATION /usr/local/include/ASPEN/)
-	install(FILES ${includes_gnuplot} DESTINATION /usr/local/include/ASPEN/external/Gnuplot/)
-	install (FILES ${PROJECT_SOURCE_DIR}/ASPENConfig.cmake DESTINATION /home/bebe0705/libs/local/lib/cmake/ASPEN/)
-else()
+if(${IS_FORTUNA})
 
 	install (TARGETS ${LIB_NAME} DESTINATION /home/bebe0705/libs/local/lib)
 	install(FILES ${includes} DESTINATION /home/bebe0705/libs/local/include/ASPEN/)
 	install(FILES ${includes_gnuplot} DESTINATION /home/bebe0705/libs/local/include/ASPEN/external/Gnuplot/)
 	install (FILES ${PROJECT_SOURCE_DIR}/ASPENConfig.cmake DESTINATION /home/bebe0705/libs/local/lib/cmake/ASPEN/)
+
+
+else()
+	
+	install (TARGETS ${LIB_NAME} DESTINATION /usr/local/lib)
+	install(FILES ${includes} DESTINATION /usr/local/include/ASPEN/)
+	install(FILES ${includes_gnuplot} DESTINATION /usr/local/include/ASPEN/external/Gnuplot/)
+	install (FILES ${PROJECT_SOURCE_DIR}/ASPENConfig.cmake DESTINATION /usr/local/share/ASPEN/)
+
 endif()
 
 
