--- a/Apps/ShapeReconstruction/CMakeLists.txt
+++ b/Apps/ShapeReconstruction/CMakeLists.txt
@@ -79,7 +79,7 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/source/cmake)
 
 # Compiler flags
 add_definitions(-Wall -O2 )
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fext-numeric-literals")
 
 
 # Find ASPEN
