added memory include to lib

--- a/Apps/BenchmarkICP/CMakeLists.txt
+++ b/Apps/BenchmarkICP/CMakeLists.txt
@@ -132,11 +132,11 @@ if(OPENMP_FOUND)
 endif()
 
 # Find PCL
-find_package(PCL 1.2 REQUIRED)
+# find_package(PCL 1.2 REQUIRED)
 
-include_directories(${PCL_INCLUDE_DIRS})
-link_directories(${PCL_LIBRARY_DIRS})
-add_definitions(${PCL_DEFINITIONS})
+# include_directories(${PCL_INCLUDE_DIRS})
+# link_directories(${PCL_LIBRARY_DIRS})
+# add_definitions(${PCL_DEFINITIONS})
 
 
 # Fortran compiler, required by Armadillo on Linux/Ubuntu
