--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -138,7 +138,7 @@ if(OPENMP_FOUND)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
-
+message("${CMAKE_CXX_FLAGS} ")
 # Fortran compiler, required by Armadillo on Linux/Ubuntu
 # if(UNIX AND NOT APPLE AND ${CMAKE_MINOR_VERSION} GREATER 0 AND NOT ${IS_FORTUNA})
 # 	find_library(GFORTRAN_LIBRARY gfortran
